toolchain/logging/elk/elasticsearch/production/eck-es-prod-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: es
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    ## resolve 502 BadGateway when using XPACK
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '180'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '180'
  name: eck-es
  namespace: eck
spec:
  rules:
  - host: es.bobobox.co.id
    http:
      paths:
      - backend:
          serviceName: eck-es-http
          servicePort: 9200
        path: /
  tls:
  - hosts:
    - es.bobobox.co.id
    secretName: es-tls
